# project-atlas

./: .gitignore  DECISIONS.md  PROJECT-STATE.md  README.md
orchestrator/: pyproject.toml
orchestrator/src/atlas/: logging_config.py
orchestrator/src/atlas/tools/: base.py
